--- a/index.html
+++ b/index.html
@@ -6,38 +6,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uma Página HTML mucho loka</title>
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 
 <body>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="contato.html">Contato</a></li>
+    <ul class="menu">
+        <li><a href="index.html" class="menuitens">Home</a></li>
+        <li><a href="contato.html" class="menuitens">Contato</a></li>
     </ul>
-    <h1>Sobre Mim</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, accusantium magnam, quos iure modi alias
-        perferendis quasi distinctio vero ea nulla sed dicta ex nam vitae aliquid doloremque laboriosam velit ullam
-        nobis error. Optio nemo itaque eligendi laudantium corporis, quidem molestiae quo fuga dignissimos veniam culpa
-        ratione earum excepturi. Ullam, quasi? Iure ad nulla saepe eaque cumque dolore dicta eos quas provident, odit
-        mollitia ducimus reprehenderit esse atque dignissimos error veritatis repellendus ipsum maiores! Nostrum sunt
-        nulla ratione delectus ipsam ipsa, temporibus voluptate laudantium accusamus esse repudiandae libero est
-        inventore mollitia explicabo aut vel consequuntur distinctio voluptas minima nihil neque. Ipsam, nulla. Aut
-        autem architecto officiis temporibus quisquam. Modi sunt illum laudantium dolor nihil error dolores
-        reprehenderit mollitia? Dolor dolorem asperiores rerum iure, accusamus sapiente autem est consequuntur sunt rem
-        repudiandae. Id nostrum provident molestias nesciunt fugiat magnam dolores quis nobis nulla aliquid fuga, ipsa
-        earum soluta inventore aliquam animi. Numquam asperiores neque iusto dicta, alias reiciendis temporibus
-        quibusdam. Totam, suscipit doloremque sit repellendus est nulla accusamus accusantium eligendi obcaecati ipsam
-        laboriosam. Corrupti, fugit? Laudantium corrupti dicta aperiam excepturi! Quibusdam consequatur totam ipsum
-        facilis quod distinctio officiis, molestiae possimus deleniti commodi necessitatibus illo perspiciatis?
-        Laboriosam consectetur natus dolore iusto quidem!
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, est?
-    </p>
-    <img src="assets/img/batma.webp" alt="Foto">
+    <h1 class="center">Sobre Mim</h1>
+    <div class="container">
+        <div class="texto">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, accusantium magnam,
+                quos iure modi alias
+                perferendis quasi distinctio vero ea nulla sed dicta ex nam vitae aliquid doloremque laboriosam velit
+                ullam
+                nobis error. Optio nemo itaque eligendi laudantium corporis, quidem molestiae quo fuga dignissimos
+                veniam
+                culpa
+                ratione earum excepturi. Ullam, quasi? Iure ad nulla saepe eaque cumque dolore dicta eos quas provident,
+                odit
+                mollitia ducimus reprehenderit esse atque dignissimos error veritatis repellendus ipsum maiores! Nostrum
+                sunt
+                nulla ratione delectus ipsam ipsa, temporibus voluptate laudantium accusamus esse repudiandae libero est
+                inventore mollitia explicabo aut vel consequuntur distinctio voluptas minima nihil neque. Ipsam, nulla.
+                Aut
+                autem architecto officiis temporibus quisquam. Modi sunt illum laudantium dolor nihil error dolores
+                reprehenderit mollitia? Dolor dolorem asperiores rerum iure, accusamus sapiente autem est consequuntur
+                sunt
+                rem
+                repudiandae. Id nostrum provident molestias nesciunt fugiat magnam dolores quis nobis nulla aliquid
+                fuga,
+                ipsa
+                earum soluta inventore aliquam animi. Numquam asperiores neque iusto dicta, alias reiciendis temporibus
+                quibusdam. Totam, suscipit doloremque sit repellendus est nulla accusamus accusantium eligendi obcaecati
+                ipsam
+                laboriosam. Corrupti, fugit? Laudantium corrupti dicta aperiam excepturi! Quibusdam consequatur totam
+                ipsum
+                facilis quod distinctio officiis, molestiae possimus deleniti commodi necessitatibus illo perspiciatis?
+                Laboriosam consectetur natus dolore iusto quidem!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, est?
+            </p>
+        </div>
+        <div>
+            <img class="imagem" src="assets/img/batma.webp" alt="Foto">
+        </div>
+    </div>
 
-    <h2>The Killers:</h2>
+    <h2 class="center">The Killers:</h2>
+    <div class="center"><iframe class="imagem" width="560" height="315" src="https://www.youtube.com/embed/4go_DzY8wHc" title="YouTube video   player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+    </iframe></div>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/4go_DzY8wHc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <hr>
+    <footer>
+    <div class="container center">
+        <div><a href="http://www.last.fm"><img src="assets/img/lastfm.png" alt="Last.fm" class="tm"></a></div>
+        <div><a href="http://www.msn.com"><img src="assets/img/msn.png" alt="MSN" class="tm"></a></div>
+        <div><a href="http://www.orkut.com"><img src="assets/img/orkut-logo.png" alt="Orkut" class="tm"></a></div>
+        <div><a href="http://www.myspace.com"><img src="assets/img/myspace.png" alt="MySpace" class="tm"></a></div>
+    </div>
+    </footer>
 </body>
 
 </html>
