Refactor: Atualização no CSS

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </iframe></div>
 
     <hr>
-    <footer>
+    <footer class="footer">
     <div class="container center">
         <div><a href="http://www.last.fm"><img src="assets/img/lastfm.png" alt="Last.fm" class="tm"></a></div>
         <div><a href="http://www.msn.com"><img src="assets/img/msn.png" alt="MSN" class="tm"></a></div>
