--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
         <div>
         <form>
             <div class="containercontato"><label for="nome">Nome:</label>
-            <input type="text" id="nome"></div>
+            <input type="text" id="nome" onkeyup='validaNome()'></div>
             <div class="containercontato"><label for="email">Email:</label>
             <input type="text" id="email"></div>
             <div class="containercontato"><label for="assunto">Assunto:</label>
@@ -34,6 +34,7 @@
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
     </div>
+    <script src="assets/scripts/script.js"></script>
 </body>
 
 </html>
